Реализована функциональность обновления и получения куплетов (с пагинацией). Изменен формат логов.
