# cmd/docs/swagger.json
@@ -44,17 +44,17 @@
         },
         "/song/": {
             "put": {
-                "description": "Добавляет новую песню",
+                "description": "Обновляет песню с таким же названием и группой",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Обновляет песню с заданным названием и группой",
+                "summary": "Обновляет песню",
                 "parameters": [
                     {
-                        "description": "Данные о песне в формате JSON",
+                        "description": "Входные данные о песне",
                         "name": "song",
                         "in": "body",
                         "required": true,
@@ -65,16 +65,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Сообщение о успешном добавлении песни",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Ok"
                     },
                     "400": {
-                        "description": "Ошибка при обработке запроса",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Bad request"
+                    },
+                    "500": {
+                        "description": "Internal server error"
                     }
                 }
             },
@@ -92,12 +89,14 @@
                     {
                         "type": "string",
                         "name": "group",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "string",
                         "name": "song",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -128,12 +127,14 @@
                     {
                         "type": "string",
                         "name": "group",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "string",
                         "name": "song",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -208,16 +209,17 @@
         },
         "/song/verses": {
             "get": {
-                "description": "Получение куплетов песни по заданным параметрам",
+                "description": "Получение куплетов песни с пагинацией",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Получение текста песни",
+                "summary": "Получение куплетов песни",
                 "parameters": [
                     {
                         "type": "string",
                         "name": "group",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "integer",
@@ -232,18 +234,19 @@
                     {
                         "type": "string",
                         "name": "song",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        }
+                        "description": "Ok"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "500": {
+                        "description": "Internal server error"
                     }
                 }
             }
@@ -252,6 +255,10 @@
     "definitions": {
         "SongCreate": {
             "type": "object",
+            "required": [
+                "group",
+                "song"
+            ],
             "properties": {
                 "group": {
                     "type": "string"
@@ -289,6 +296,10 @@
         },
         "SongUpdate": {
             "type": "object",
+            "required": [
+                "group",
+                "song"
+            ],
             "properties": {
                 "group": {
                     "type": "string"
